# ComfyUI-SAM3

./: README.md  __init__.py  install.py  installer.py  prestartup_script.py  pyproject.toml  requirements.txt  uninstall.py
example_workflows/: image_seg_point.json  scene_seg.json  scene_seg_interactive.json  video_point_prompt.json
example_workflows/api/: image_seg_point_api.json  scene_seg_api.json  scene_seg_interactive_api.json  video_point_prompt_api.json
nodes/: sam3_interactive.py
workflows/api/: image_seg_text_api.json
